# f1-race-winner-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  fetch_data.py  main.py  model.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.py  test.py
docs/: cloud_setup.md  developer_guide.md
grafana/provisioning/dashboards/: f1-predictor.json
grafana/provisioning/datasources/: prometheus.yml
prometheus/: prometheus.yml
prometheus/rules/: alerts.yml
scripts/: aws_user_data.sh  deploy.py  git_automation.py  init_dev.py  manage.py  run_git_automation.py  setup_monitoring.py
src/: __init__.py  app.py
src/api/: f1_api.py
src/automation/: scheduler.py
src/data_collection/: scraper.py
src/ml/: __init__.py  ensemble_model.py  f1_api.py  feature_engineering.py  model.py  predictor.py
src/templates/: index.html
src/web/: __init__.py  app.py  routes.py
src/web/templates/: index.html
tests/: test_model.py
